<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vk_white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_kettle_style"
            android:text="@string/autoheating" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/button_kettle_style"
                android:text="@string/turn_on" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_kettle_style"
                android:text="@string/turn_off" />

        </LinearLayout>

        <github.hellocsl.cursorwheel.CursorWheelLayout
            android:id="@+id/conditioner_controller4"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:wheelBackgroundColor="@color/color1"
            app:wheelCursorHeight="20dp"
            app:wheelItemRotateMode="none"
            app:wheelSelectedAngle="270" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="@color/color1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="10dp">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/current_temperature"
                android:textColor="@color/colorPrimaryText"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:text="@string/current_temperature_value"
                android:textColor="@color/colorPrimaryText"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
